reduce height of .card in media queiry 562px to fix but of hover card overlapping nav bar, updated readme accordingly

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -421,7 +421,7 @@ footer {
 
     .card {
         width: 100%;
-        height: 33vh;
+        height: 27vh;
     }
 
     .card-reverse {
